@@ -1,5 +1,6 @@
 Changes in Version 0.13.2
   o Fixed a bug in 'intersectionmodel' not properly clearing removed parameters
+  o Improved starting values for identity model in partialprune
 
 Changes in Version 0.13.1
   o Bootstrapping now occurs before standardizing the data (thanks to Yiwei Yang and Amanda Montoya)
